--- a/testscript.html
+++ b/testscript.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>User Details</h2>
+<h2>Welcome!!!</h2>
 
 <h3>Below mentioned details are captured</h3>
 <button onclick="getLocation()">Allow location Access</button>
@@ -60,7 +60,7 @@ function showPosition(position) {
 }
 </script>
 </body>
-</html> 
+</html>
 
 
 
