--- a/AdWebPage.html
+++ b/AdWebPage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Welcome to Ad Hosting Website</h2>
+<h2>Welcome to XYZ Ad Hosting Website</h2>
 <h3>Click on link below</h3>
-<button onclick="location.href = 'https://tponkshe96.github.io/';">Click Here</button>
+<button onclick="location.href = 'https://demowebpage.github.io/test/testscript.html';">Click Here</button>
 <p id="demo"></p>
 </body>
 </html>
